syntax = "proto3";
option optimize_for = LITE_RUNTIME;

import "animFrameData.proto";

message animClipData_proto
{
	repeated animFrameData_proto frames = 1;
	optional uint32 numBones = 2;
}
